--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@vitejs/plugin-react": "^4.2.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.2.2",
-    "vite": "^7.3.1",
-    "@tailwindcss/vite": "^4.0.0",
-    "tailwindcss": "^4.0.0"
+    "vite": "^7.3.1"
   }
 }
